<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Contacts</string>
    <string name="action_new">New Contact</string>
    <string name="action_delete">Delete Contact</string>
    <string name="action_edit">Edit Contact</string>
    <string name="action_save">Save  Contact</string>
    <string name="title_activity_edit">Edit</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="name_hint">Enter First Name*</string>
    <string name="lastname_hint">Enter Last Name</string>
    <string name="phoneNumber_hint">Enter Phone Number</string>
    <string name="emailid_hint">Enter Email Id</string>
    <string name="help_text">Enter Below Details. First Name Is Mandatory.</string>
    <string name="saveButtonText">Save Contact</string>
	<string name="emptylist">(There are no contacts to show)</string>
    <string name="search_hint">Type a name to search</string>
    <string name="view_contact_actions">Click on phone number/email address to connect</string>
    <string name="desc">Placeholder</string>
    
    <string name="title_activity_view_contact">Details</string>

</resources>
