<!--Activity for modifying existing or adding new contact
    Author: Gaurav Gandhi
 -->
	
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    style="@style/background_style"
    tools:context="com.example.contactmanager.EditActivity">

    
    <TextView
    android:id="@+id/TextViewTitle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentLeft="true"
    android:layout_alignParentRight="true"
    android:layout_alignParentTop="true"	        
    android:text="@string/help_text"
    android:textSize="6pt"
    android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/firstName_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TextViewTitle"
        android:layout_alignRight="@+id/TextViewTitle"
        android:layout_below="@+id/TextViewTitle"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/name_hint"
        android:inputType="textPersonName">
        <requestFocus />
    </EditText>
    	
    
    <EditText
        android:id="@+id/lastName_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/firstName_text"
        android:layout_alignRight="@+id/firstName_text"
        android:layout_below="@+id/firstName_text"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/lastname_hint"
        android:inputType="textPersonName" />
           
    <EditText
        android:id="@+id/phoneNumber_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/firstName_text"
        android:layout_alignRight="@+id/firstName_text"
        android:layout_below="@+id/lastName_text"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/phoneNumber_hint"
        android:inputType="phone|textPersonName" />
    
    <EditText
        android:id="@+id/emailid_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/firstName_text"
        android:layout_alignRight="@+id/firstName_text"
        android:layout_below="@+id/phoneNumber_text"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/emailid_hint"
        android:inputType="textEmailAddress|textPersonName" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/emailid_text"
        android:layout_below="@+id/emailid_text"
        android:layout_marginTop="15dp"
        android:onClick="saveChanges"
        android:text="@string/saveButtonText" />
		
    
	</RelativeLayout>